--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
 			right: 30px;
 			width: 20%;
 		}
+		.team-name {
+			font-family: 'Khula', sans-serif;
+			font-weight: bolder;
+			font-size: 2.3em;
+		}
 		</style>
+		<link href="https://fonts.googleapis.com/css?family=Khula:700" rel="stylesheet">
 	<body>
 		<div id="bracket">
 		</div>
