--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 		<style>
 		.round-arc {
 			stroke: white;
+			stroke-width: 3px;
 		}
 		.round-arc.dark-gray {
 			fill: #929496;
@@ -26,6 +27,7 @@
 			font-family: 'Khula', sans-serif;
 			font-weight: bolder;
 			font-size: 2.3em;
+			letter-spacing: -.9px;
 		}
 		</style>
 		<link href="https://fonts.googleapis.com/css?family=Khula:700" rel="stylesheet">
