--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 		<style>
 		.round-arc {
 			stroke: white;
-			stroke-width: 3px;
+			stroke-width: 2px;
 		}
-		.round-arc.dark-gray {
+		.dark-gray {
 			fill: #929496;
 		}
-		.round-arc.light-gray {
+		.light-gray {
 			fill: #d1d2d3
 		}
 		body {
