--- a/index.html
+++ b/index.html
@@ -16,6 +16,24 @@
 			align-items: center;
 			background-image: url('./bg_gray.jpg');
 			background-position: center;
+			background-repeat: no-repeat;
+			background-size: cover;
+		}
+		#bracket {
+			width: 100%;
+			display: flex;
+			justify-content: center;
+		}
+		#bracket svg {
+			width: 50%;
+			max-width: 700px;
+			height: 100%;
+		}
+		@media (max-width: 1000px) {
+			#bracket svg {
+				width: calc(100% - 6em);
+				max-width: none;
+			}
 		}
 		#playoffs-logo {
 			position: fixed;
@@ -28,6 +46,9 @@
 			font-weight: bolder;
 			font-size: 2em;
 			letter-spacing: -.9px;
+		}
+		.game-counter-dot {
+			opacity: 0.3;
 		}
 		</style>
 		<link href="https://fonts.googleapis.com/css?family=Khula:700" rel="stylesheet">
