og atonoby tags

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta property="og:image" content="https://raw.githubusercontent.com/varughese/nba-radial-bracket/master/repository-open-graph-template.png">
+		<meta property="og:title" content="NBA Radial Bracket">
+		<meta property="og:description" content="View the NBA playoffs in a Radial bracket" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">		
 		<link rel="stylesheet" type="text/css" href="./index.css"/>
 	</head>
