--- a/src/index.html
+++ b/src/index.html
@@ -1,38 +1,45 @@
 <?xml version="1.0" standalone="no"?>
-<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN"
-"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta property="og:image" content="https://raw.githubusercontent.com/varughese/nba-radial-bracket/master/repository-open-graph-template.png">
-		<meta property="og:title" content="NBA Radial Bracket">
-		<meta property="og:description" content="View the NBA playoffs in a Radial bracket" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">		
-		<link rel="stylesheet" type="text/css" href="./index.css"/>
-	</head>
-	<body>
-		<div id="title">
-			<h2 id="inspired"><span id="year"></span> NBA Playoffs</h2>
-			<div class="hide-when-small">Radial Bracket</div>
+
+<head>
+	<meta charset="utf-8">
+	<meta property="og:image"
+		content="https://raw.githubusercontent.com/varughese/nba-radial-bracket/master/repository-open-graph-template.png">
+	<meta property="og:title" content="NBA Radial Bracket">
+	<meta property="og:description" content="View the NBA playoffs in a Radial bracket" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" type="text/css" href="./index.css" />
+</head>
+
+<body>
+	<div id="title">
+		<h2 id="inspired"><span id="year"></span> NBA Playoffs</h2>
+		<div class="hide-when-small">Radial Bracket</div>
+	</div>
+	<div id="bracket">
+		<span>Loading ...</span>
+	</div>
+	<div id="controls">
+		<button id="yearleft" onclick="changeYear(-1)"><span>&larr;&nbsp;</span><span
+				id="prev-year-text"></span></button>
+		<button class="invisible" id="yearright" onclick="changeYear(1)"><span
+				id="next-year-text"></span><span>&nbsp;&rarr;</span></button>
+	</div>
+	<img id="playoffs-logo" />
+	<div id="credits">
+		<div id="github" class="hide-when-small">
+			<a target="_blank" href="https://www.github.com/varughese/nba-radial-bracket">
+			</a>
 		</div>
-		<div id="bracket">
-			<span>Loading ...</span>
-		</div>
-		<div id="controls">
-			<button id="yearleft" onclick="changeYear(-1)"><span>&larr;&nbsp;</span><span id="prev-year-text"></span></button>
-			<button class="invisible" id="yearright" onclick="changeYear(1)"><span id="next-year-text"></span><span>&nbsp;&rarr;</span></button>
-		</div>
-		<img id="playoffs-logo"/>
-		<div id="credits">
-			<div id="github" class="hide-when-small">
-				<a target="_blank" href="https://www.github.com/varughese/nba-radial-bracket">
-				</a>
+		<div>
+			<div id="inspired">Inspired By</div>
+			<div><a target="_blank"
+					href="https://www.reddit.com/r/nba/comments/bgckp4/updated_2019_playoffs_radial_bracket_celtics/">@MYKCRAWFORD</a>
 			</div>
-			<div>
-				<div id="inspired">Inspired By</div>
-				<div><a target="_blank" href="https://www.reddit.com/r/nba/comments/bgckp4/updated_2019_playoffs_radial_bracket_celtics/">@MYKCRAWFORD</a></div>
-			</div>
 		</div>
-		<script src="./index.js"></script>
-	</body>
+	</div>
+	<script src="./index.js"></script>
+</body>
+
 </html>
